search button visibility issue fixed

--- a/sass/component/header/_header.scss
+++ b/sass/component/header/_header.scss
@@ -55,6 +55,7 @@
   display: flex;
   align-items: center;
   padding: 1rem;
+  z-index: 2;
 }
 
 .aligned-menu-right {
