--- a/style.css
+++ b/style.css
@@ -1521,6 +1521,7 @@ li > ul.sub-menu {
 	-ms-flex-align: center;
 	align-items: center;
 	padding: 1rem;
+	z-index: 2;
 }
 
 .header-wrap,
